--- a/main/package.json
+++ b/main/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "awakened-poe-trade",
-  "version": "3.25.104",
+  "name": "awakened-poe-trade-frank",
+  "version": "0.325104.0",
   "private": true,
   "scripts": {
     "dev": "node build/script.mjs",
@@ -9,10 +9,6 @@
   },
   "author": {
     "name": "Alexander Drozdov"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SnosMe/awakened-poe-trade.git"
   },
   "main": "dist/main.js",
   "dependencies": {
