--- a/renderer/package.json
+++ b/renderer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awakened-poe-trade",
+  "name": "awakened-poe-trade-frank",
   "version": "0.0.0",
   "private": true,
   "scripts": {
