more cleanup and name update

--- a/renderer/public/data/en/app_i18n.json
+++ b/renderer/public/data/en/app_i18n.json
@@ -275,7 +275,7 @@
     "stack": "Stack"
   },
   "settings": {
-    "title": "Settings - Awakened PoE Trade",
+    "title": "Settings - Awakened PoE Trade Frank",
     "language": "Language",
     "private_league": "or Private League",
     "account_name": "Account name",
