--- a/renderer/public/data/ru/app_i18n.json
+++ b/renderer/public/data/ru/app_i18n.json
@@ -291,7 +291,7 @@
     "stack": "Стак"
   },
   "settings": {
-    "title": "Настройки - Awakened PoE Trade",
+    "title": "Настройки - Awakened PoE Trade Frank",
     "language": "Язык",
     "private_league": "или Приватная лига",
     "account_name": "Имя учетной записи",
